Add de translations

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,1 +1,5 @@
-{}
+{
+  "Log out of all devices.": "Log out of all devices.",
+  "Log out of others devices.": "Log out of others devices.",
+  "Log out of this device.": "Log out of this device."
+}
